[project]
name = "comfyui-lexmsdbnodes"
description = "Nodes: MSSqlTableNode, MSSqlSelectNode. This extension provides custom nodes to interact with MSSQL."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["numpy", "opencv-python", "git+https://github.com/facebookresearch/detectron2.git", "pyodbc"]

[project.urls]
Repository = "https://github.com/SOELexicon/ComfyUI-LexMSDBNodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lexicon"
DisplayName = "ComfyUI-LexMSDBNodes"
Icon = ""
